--- a/HydraulicCalculator/HydraulicCalculator.csproj
+++ b/HydraulicCalculator/HydraulicCalculator.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Formulas\AbstractFormulaProvider.cs" />
     <Compile Include="Formulas\IFormulaProvider.cs" />
     <Compile Include="Formulas\Providers\CylinderDiameterFormulaProvider.cs" />
+    <Compile Include="Formulas\Providers\SquarePistonCylinderFormulaProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
