--- a/HydraulicCalculator/HydraulicCalculator.csproj
+++ b/HydraulicCalculator/HydraulicCalculator.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Formulas\IFormulaProvider.cs" />
     <Compile Include="Formulas\Providers\CylinderDiameterFormulaProvider.cs" />
     <Compile Include="Formulas\Providers\SquarePistonCylinderFormulaProvider.cs" />
+    <Compile Include="Formulas\Providers\SquareRodCylinderFormulaProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
